migración del sistema a persistencia con base de datos